--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-spring-boot-xml-starter</artifactId>
+			<version>4.11.0</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.apache.camel.springboot</groupId>-->
+<!--			<artifactId>camel-xml-io-dsl-starter</artifactId>-->
+<!--			<version>4.12.0</version>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
