--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,10 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-spring-boot-starter</artifactId>
 			<version>4.12.0</version>
@@ -61,6 +65,35 @@
 			<artifactId>camel-spring-boot-xml-starter</artifactId>
 			<version>4.11.0</version>
 		</dependency>
+		<!-- JMS ActiveMQ, RabbitMQ, IBMMQ -->
+<!--		<dependency>-->
+<!--			<groupId>org.apache.camel.springboot</groupId>-->
+<!--			<artifactId>camel-jms-starter</artifactId>-->
+<!--			<version>4.11.0</version>-->
+<!--		</dependency>-->
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-activemq-starter</artifactId>
+			<version>4.11.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-jaxb-starter</artifactId>
+			<version>4.11.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-jackson-starter</artifactId>
+			<version>4.11.0</version>
+		</dependency>
+
+<!--		<dependency>-->
+<!--			<groupId>org.apache.camel.springboot</groupId>-->
+<!--			<artifactId>camel-jacksonxml-starter</artifactId>-->
+<!--			<version>4.11.0</version>-->
+<!--		</dependency>-->
 <!--		<dependency>-->
 <!--			<groupId>org.apache.camel.springboot</groupId>-->
 <!--			<artifactId>camel-xml-io-dsl-starter</artifactId>-->
