--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-camel.springboot.xmlRoutes=classpath:*.xml
+#camel.springboot.xmlRoutes=classpath:*.xml
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
+spring.activemq.packages.trust-all=true
