--- a/podman/docker-compose.yaml
+++ b/podman/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
 
   rabbitmq:
@@ -24,3 +23,17 @@ services:
       - ./jetty.xml:/opt/apache-activemq/conf/jetty.xml
 
 
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    user: "0"
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: camel_db
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+volumes:
+  pgdata:
