--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ spring.activemq.user=admin
 spring.activemq.password=admin
 spring.activemq.packages.trust-all=true
 spring.jackson.date-format=yyyy-MM-dd
+spring.datasource.url=jdbc:postgresql://localhost:5432/camel_db
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
